--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-<html>
-
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
+  
   <title>Daiane Periard - DoWhile 2021</title>
   <link rel="stylesheet" href="style.css" />
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
